--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Phone Number Generator</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('serve_css') }}">
 </head>
 <body>
     <h1>Generate Phone Number Variations</h1>
