--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,7 +6,7 @@
 </head>
 <body>
     <h1>Generate Phone Number Variations</h1>
-    <form action="{{ url_for('index') }}" method="post" enctype="multipart/form-data">
+    <form action="/" method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label for="variations">Variations per Number:</label>
             <input type="number" id="variations" name="variations" value="5" min="1" max="20" required>
