--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Generate Phone Number Variations</h1>
-    <form action="/" method="POST" enctype="multipart/form-data">
+    <form action="{{ url_for('index') }}" method="POST" enctype="multipart/form-data">
         <div class="form-group">
             <label for="variations">Variations per Number:</label>
             <input type="number" id="variations" name="variations" value="5" min="1" max="20" required>
